# ChangeLog for dev-lisp/sbcl
# Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-lisp/sbcl/ChangeLog,v 1.108 2007/05/08 08:29:59 joslwah Exp $

*sbcl-1.0.5 (08 May 2007)

  08 May 2007; Joshua <joslwah@gentoo.org> +sbcl-1.0.5.ebuild:
  Adding new release.

  11 Apr 2007; Gustavo Zacarias <gustavoz@gentoo.org> sbcl-1.0.4.ebuild:
  Fast track to sparc stable, see #173669

  10 Apr 2007; Gustavo Zacarias <gustavoz@gentoo.org> sbcl-1.0.1.ebuild,
  sbcl-1.0.4.ebuild:
  Keyword ~sparc for 1.0.4 wrt #173669 and -sparc for 1.0.1 wrt #173641

  07 Apr 2007; Fabian Groffen <grobian@gentoo.org> sbcl-0.9.17.ebuild,
  sbcl-0.9.18.ebuild, sbcl-1.0.ebuild, sbcl-1.0.1.ebuild, sbcl-1.0.4.ebuild:
  Dropped ppc-macos keyword, see you in prefix

  07 Apr 2007; Christian Faulhammer <opfer@gentoo.org> sbcl-1.0.4.ebuild:
  keyworded ~amd64/~x86, bug 173669

  07 Apr 2007; Christian Faulhammer <opfer@gentoo.org> sbcl-1.0.1.ebuild:
  stable amd64, bug 173641

*sbcl-1.0.4 (07 Apr 2007)

  07 Apr 2007; Joshua <joslwah@gentoo.org> sbcl-1.0.1.ebuild,
  +sbcl-1.0.4.ebuild:
  Keyworded ppc stable on 1.0.1 and ~ppc for 1.0.4.

  07 Apr 2007; Christian Faulhammer <opfer@gentoo.org> sbcl-1.0.1.ebuild:
  stable x86, bug 173641

  03 Mar 2007; Marius Mauch <genone@gentoo.org> sbcl-0.9.3.ebuild,
  sbcl-0.9.4.ebuild, sbcl-0.9.17.ebuild, sbcl-0.9.18.ebuild,
  sbcl-1.0.ebuild, sbcl-1.0.1.ebuild:
  Replacing einfo with elog

*sbcl-1.0.1 (18 Jan 2007)

  18 Jan 2007; <mkennedy@gentoo.org> +sbcl-1.0.1.ebuild:
  New upstream version.

  19 Dec 2006; Matthew Kennedy <mkennedy@gentoo.org> sbcl-1.0.ebuild:
  Remove dependency on dev-lisp/cl-asdf.

*sbcl-1.0 (30 Nov 2006)

  30 Nov 2006; Joshua <joslwah@gentoo.org> +sbcl-1.0.ebuild:
  Initial commit of 1.0.

  14 Nov 2006; Matthew Kennedy <mkennedy@gentoo.org> sbcl-0.9.18.ebuild:
  Install sbclrc to /etc, not /.

*sbcl-0.9.18 (09 Nov 2006)

  09 Nov 2006; Matthew Kennedy <mkennedy@gentoo.org>