@@ -1,18 +1,16 @@
 AUX disable-tests-gentoo.patch 2398 RMD160 65a45c07af77b042da859fb00d6f19c7d3354289 SHA1 3f970fdc360b081e51b82a92debd5b2522b73707 SHA256 503fb71f962097025375cdbb6e2a80d734f107d7c13148319f7cf9170a6f65d2
 AUX vanilla-module-install-source-gentoo.patch 471 RMD160 6eace9d24ddade1e53900880c944f332b32e3b10 SHA1 f70d4c097926ca6c61b8601dbb2b672571c5e1fe SHA256 af86a188c77abc5624744683ee91e4414554ebd0f83b9d1b7dcb01468316cd52
 DIST sbcl-0.7.10-mips-linux-binary.tar.gz 7473873 RMD160 d9c34e109dd307bfe652ef57d5837c83cbc60055 SHA1 3269ee0e07770c69e5420113d9aba24918058d7f SHA256 90bff80973c3e295b5ecdd0b59525583ae04cb2d5967378af65e04ac77fad660
-DIST sbcl-0.8.15-powerpc-linux-binary.tar.bz2 6656148 RMD160 0e73b6e96f0170d44be60dfde8bf580596d3a6ee SHA1 67b7000af7db63cc421096be652b99fd27b251e6 SHA256 fef30a771530096c4f190c60d9d7c396844fc67a3ec2bbaae9b0ff497f925129
 DIST sbcl-0.8.15-sparc-linux-binary.tar.bz2 6903090 RMD160 41015dcfb41caf93b54a02a0f55eec994309accf SHA1 dc3ccb22dae86e8bacacf3013eb3aae8645c3109 SHA256 f0bc5fc11e9c0f1651ebe773b5c7e972da589cc4af2811d25438a099f490cc7d
 DIST sbcl-0.9.11a-powerpc-darwin-binary.tar.bz2 6766401 RMD160 c60dba2a0278acf787d53a93ebac4de03c1d5ed8 SHA1 98143a20f5c04fd6456f5cfaa94182ab7d9e6576 SHA256 5cb563b19d1dd828e55bde9763404f5b908c9f5a043ba8c443415291b969b3d9
 DIST sbcl-0.9.14-x86-64-linux-binary.tar.bz2 7225013 RMD160 7a544bedebd4389eb75fe67bb48c0d25f677bc0d SHA1 9932277a070883e693d9efd7a5f54fb4c11314dd SHA256 3db39ce36b1efc42cf99fc1be355aa8c0107e60ffb56f50bb001cc9b5cab70eb
-DIST sbcl-0.9.14-x86-linux-binary.tar.bz2 7517927 RMD160 039968db40389a481da29dcc310aa05a50ee6ac6 SHA1 8a5e63e9bf0de8ed738dab9c939dac3e51698984 SHA256 f1add7f9c76e1ea45f17b752a62f5ad5d1fb4d27d06ae5ebfed05629bba9fafa
 DIST sbcl-1.0-powerpc-linux-binary.tar.bz2 6841127 RMD160 11cba4cec1efed9d9b322ab80d58ec63b93f66e4 SHA1 a95873859c529ac3e8013d64bc1a8ad345c1f6bc SHA256 912bdbee882907b5d4437fb9611637e31801db5303ddcd34f9514a386b0b995f
 DIST sbcl-1.0-x86-linux-binary.tar.bz2 7648991 RMD160 8b9ee33c023592b78d0adbdb4c3d2d0cd150bc94 SHA1 c438defc958732a65707833192c7a0be6903f669 SHA256 d0de659330368584d604ac54f38576d8b4e80d30c4c9d43cb8def8919b8b2878
-DIST sbcl-1.0.1-source.tar.bz2 2902375 RMD160 c86b352f547f3526288704e1a74463718ba11fe9 SHA1 ddd1a7595ea83ed1655c716fc7c967ee8ff13878 SHA256 91ca14366b1363d3fa745a91a93005eaca74235d9225936d80b1d34116e76e5a
 DIST sbcl-1.0.4-source.tar.bz2 3104865 RMD160 0b4e3ee4ecf2ce298ecde7b8f0c9b94428bbc4b2 SHA1 521d227a15c94caa0506affcda62ebf80d7f13cf SHA256 f7ba981b197fce757772761c6ee4f6640402e8d5265afaf1975f108bb9b1283e
 DIST sbcl-1.0.5-source.tar.bz2 3115687 RMD160 fcbb0554c8923c55c1a6ab633d22ef59e0bd764e SHA1 f3e5c89d90a49a745851ea6c4431ef3f9a61ae19 SHA256 9dd9914eaa5d48feb46ef67e362dee0c97943e09daa78a098d1eb18279428079
-EBUILD sbcl-1.0.1.ebuild 5469 RMD160 3d06f8d15c31dc26cb3cf104b5e58dfb348a7c0f SHA1 13cc42e84775f9fa37baf0cbe7071e267d9b1071 SHA256 c309ace63e9aa49843421639a2c106cda2e8527da1dd4b12070663a0a4453ce1
+DIST sbcl-1.0.6-source.tar.bz2 3116968 RMD160 f1701da1ec89a064e8ddc6550399a13fc0f632ff SHA1 362e4e5649f9262f06cf129058a4c895430ea6a5 SHA256 41b40e8ac3ae6dc27f02a76dcfe90efb4c250bafa49795c92fb8d85bed5308f0
 EBUILD sbcl-1.0.4.ebuild 5463 RMD160 c8934dff136e110a94d8e967df1e3395319ea6f7 SHA1 9677b1079c6608f39af73d9f26afc67331a5e2cb SHA256 af14b5a5666dfb07988bf37ab0ac43b3316b58466d1fd39aa46f6dbeed06da11
 EBUILD sbcl-1.0.5.ebuild 5462 RMD160 8fd68c3bdc4930b9d7804b132e7d1dda48e002b2 SHA1 ab34bb0e49f8c5447936592f99e137ab98978b12 SHA256 6bc3aabd8d44cd5c59e1adad309d398888d581723c7e34f5b6955d88e73f0781
-MISC ChangeLog 34834 RMD160 59105085efb775731b3ca996f5e5abc7baa304da SHA1 fcaf1e272f74fc017f22c393e8b47ff7d7e26faf SHA256 893450c6a07f3372b9718400e2a6b99feed6ca7dee037ce8498f245f42bfe51b
+EBUILD sbcl-1.0.6.ebuild 5462 RMD160 2ab83f0f57b01790c2af64aa24c9751c30cb5d42 SHA1 99d1c241f90507b3a683fa51576f11466c5f34c4 SHA256 c491dae6bf86f6830109d088a24c6b432a67a6f9b50dab57ef2734ccf0f5fa65
+MISC ChangeLog 34955 RMD160 45168aa3aba0460ea3d4b4bdd6c93c092d6e3cd0 SHA1 d3f181a2d07a7007521a62e3e05cc0ce9797476a SHA256 196eb312b5c1a1f627469d93fc553f4cfe320ce77a9c51b509ef2bb5fb0e0664
 MISC metadata.xml 1004 RMD160 79462681370688e5a3700593b5b6c9401bb7ccde SHA1 b800796ace836a62cd9d500487f3c6e21d89f5f8 SHA256 4cb74fa43cdc4e8291063beae14ca74fb605508225913474763ad3fb7e6985d7
