@@ -1,13 +1,13 @@
 # Copyright 1999-2007 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-lisp/sbcl/sbcl-1.0.1.ebuild,v 1.8 2007/04/10 22:15:38 gustavoz Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-lisp/sbcl/sbcl-1.0.6.ebuild,v 1.1 2007/05/28 14:36:21 joslwah Exp $
 
 EAPI="prefix"
 
 inherit common-lisp-common-3 eutils flag-o-matic
 
-BV_X86=0.9.14
-BV_PPC=0.8.15
+BV_X86=1.0
+BV_PPC=1.0
 BV_SPARC=0.8.15
 BV_MIPS=0.7.10
 BV_AMD64=0.9.14
