@@ -1,6 +1,11 @@
 # ChangeLog for dev-lisp/sbcl
 # Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-lisp/sbcl/ChangeLog,v 1.108 2007/05/08 08:29:59 joslwah Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-lisp/sbcl/ChangeLog,v 1.109 2007/05/28 14:36:21 joslwah Exp $
+
+*sbcl-1.0.6 (28 May 2007)
+
+  28 May 2007; Joshua <joslwah@gentoo.org> +sbcl-1.0.6.ebuild:
+  New version 1.0.6 released.
 
 *sbcl-1.0.5 (08 May 2007)
 
